--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/pantheon-systems/wordpress-composer"
-    },
-    {
-        "type": "package",
-        "package": {
-            "name": "gregpymm/wp_theme",
-            "type": "wordpress-theme",
-            "version": "dev-master",
-            "source": {
-                "type": "git",
-                "url": "git@github.com:gregpymm/wp-theme.git",
-                "reference": "master"
-            }
-        }
     }
   ],
   "require": {
@@ -38,8 +25,7 @@
     "wpackagist-plugin/wp-native-php-sessions": "^0.6.0",
     "wpackagist-theme/twentyseventeen": "^1.1",
     "wpackagist-plugin/redirection":"^4.1.1",
-    "wpackagist-plugin/enable-media-replace":"^3.2.9",
-    "gregpymm/wp_theme":"dev-master"
+    "wpackagist-plugin/enable-media-replace":"^3.2.9"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
